--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -4,7 +4,7 @@
   width: 90%;
   // border: 2px solid blue;
 
-  margin-top: 5%;
+  margin-top: 3%;
   flex-wrap: wrap;
   column-gap: 10px;
   row-gap: 10px;
