--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -4,7 +4,8 @@
   justify-content: space-between;
   padding-left: 2rem;
   padding-right: 2rem;
-  font-size: 2.4rem;
+  font-size: 1.6rem;
+  padding: 10px 25px;
 }
 
 .nav-items {
